--- a/config/database.yml
+++ b/config/database.yml
@@ -61,6 +61,10 @@ development:
 test:
   <<: *default
   database: blog_app
+  username: Tayyab
+  password: fuckoff112$
+  local: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
