--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -28,5 +28,5 @@
       ],
       "csstree/validator": true
     },
-    "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
+    "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css","app/assets/stylesheets/user.css","app/assets/stylesheets/post.css"]
   }
